fixed bad spacing

--- a/Source/Croom/Croom.Frontend/css/style.css
+++ b/Source/Croom/Croom.Frontend/css/style.css
@@ -60,7 +60,7 @@ html, body{
 }
 
 /*lightBox*/
-form{
+form.bootstrap-element.lightbox-form{
     position: absolute;
     margin-left:auto;
     margin-right:auto;
@@ -73,12 +73,12 @@ form{
     color: whitesmoke;
 }
 
-form > fieldset{
+form.bootstrap-element.lightbox-form > fieldset{
     margin:20px;
     width:400px;
 }
 
-form > fieldset legend{
+form.bootstrap-element.lightbox-form > fieldset legend{
     color: whitesmoke;
 }
 
